add back vector benchmarks